# autonomi-video-management

./: .dockerignore  .env.example  .env.local-public.example  .env.local.example  .env.production.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.backup.prod.yml  docker-compose.backup.yml  docker-compose.debug-ports.yml  docker-compose.local-public.yml  docker-compose.local.yml  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.rust-admin.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-release.yml  publish-images.yml
antd_service/: Cargo.toml  Dockerfile
antd_service/src/: client.rs  config.rs  error.rs  main.rs  routes.rs  state.rs
antd_service/src/routes/: data.rs  file.rs  health.rs  shared.rs  wallet.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: .prettierignore  Dockerfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.mts
apps/web/e2e/: upload-playback.spec.ts
apps/web/src/: App.css  App.tsx  constants.ts  desktop.ts  main.tsx  runtimeConfig.ts
autonomi_devnet/: Dockerfile  start-local-devnet.sh
backup_sidecar/: Dockerfile  backup-sidecar.sh
common/: Cargo.toml
common/src/: circuit_breaker.rs  http_util.rs  lib.rs  metrics.rs  prometheus.rs  runtime.rs
crates/antd_service/: Cargo.toml  Dockerfile
crates/antd_service/src/: config.rs  error.rs  main.rs
crates/antd_service/src/routes/: data.rs  file.rs  shared.rs  wallet.rs
crates/common/: Cargo.toml
crates/common/src/: env.rs  error.rs  health.rs  lib.rs  metrics.rs  resilience.rs  security.rs  shutdown.rs
crates/common/src/antd/: mod.rs  recorder.rs  types.rs
crates/launcher_core/: Cargo.toml
crates/launcher_core/src/: lib.rs  options.rs  process.rs  proxy.rs  setup.rs  stack.rs  tests.rs  tools.rs  util.rs
crates/rust_admin/: Dockerfile  README.md
crates/rust_admin/migrations/: 0001_initial.sql  0002_encode_settings.sql
crates/rust_admin/src/: antd_client.rs  auth.rs  catalog.rs  config.rs  constants.rs  db.rs  errors.rs  lib.rs  main.rs  media.rs  metrics.rs  pipeline.rs  routes.rs  state.rs
crates/rust_admin/tests/: db_tests.rs
crates/rust_stream/: Dockerfile
crates/rust_stream/src/: antd_client.rs  cache.rs  config.rs  main.rs  routes.rs  tests.rs
crates/standalone_launcher/src/: main.rs
deploy/: docker-compose.backup.yml  docker-compose.ci.yml  docker-compose.debug-ports.yml  docker-compose.local.yml  docker-compose.logging.yml  docker-compose.prod.yml  docker-compose.yml
deploy/autonomi_devnet/: Dockerfile  start-local-devnet.sh
deploy/monitoring/loki/: config.yml
deploy/monitoring/prometheus/: prometheus.yml
deploy/monitoring/promtail/: config.yml
desktop_app/: package-lock.json
desktop_app/src-tauri/: Cargo.toml  build.rs
desktop_app/src-tauri/capabilities/: default.json
desktop_app/src-tauri/permissions/autogenerated/: desktop_start_stack.toml
desktop_app/src-tauri/src/: main.rs
docs/: ALERTMANAGER_SETUP.md  ARCHITECTURE.md  BACKUP_SIDECAR.md  DEPLOYMENT.md  DESKTOP_APP.md  DISASTER_RECOVERY.md  IMAGE_PUBLISHING.md  IMPROVEMENT_PLAN.md  OBSERVABILITY.md  PERFORMANCE_TUNING.md  README.md  RUNTIME_MODES.md  TROUBLESHOOTING.md  runtime-contract.example.json
launcher_core/: Cargo.toml
launcher_core/src/: lib.rs
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: autvid-admin-jobs-uploads.json  autvid-antd-health.json  autvid-service-requests.json  autvid-stream-cache-health.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: autvid-alerts.yml
nginx/: Dockerfile  Dockerfile.rust-admin
nginx/conf.d/: default.conf
postgres-init/: Dockerfile  init-dbs.sh
python_admin/: Dockerfile  README.md  requirements.txt
python_admin/src/: admin_service.py  antd_client.py
python_admin/tests/: test_admin_config.py  test_admin_postgres_integration.py  test_admin_robustness.py  test_admin_smoke.py
react_frontend/: Dockerfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.mjs  vite.config.mts
react_frontend/e2e/: upload-playback.spec.ts
react_frontend/public/: index.html  runtime-config.js
react_frontend/src/: App.css  App.js  App.jsx  App.test.js  App.test.jsx  App.test.tsx  App.tsx  constants.js  constants.ts  desktop.test.ts  desktop.ts  runtimeConfig.js  runtimeConfig.test.ts  runtimeConfig.ts  types.ts
react_frontend/src/__tests__/: admin.test.tsx  apiClient.test.ts  auth.test.tsx  playback.test.tsx  testUtils.tsx  upload.test.tsx
react_frontend/src/api/: client.js  client.ts
react_frontend/src/components/: DesktopSetupGate.tsx  FinalQuotePanel.jsx  FinalQuotePanel.tsx  Library.jsx  Library.tsx  LoginPanel.jsx  LoginPanel.tsx  (+4 more)
rust_admin/: Cargo.toml  Dockerfile  README.md
rust_admin/migrations/: 0001_initial.sql  0002_admin_refresh_sessions.sql  0003_active_job_uniqueness.sql
rust_admin/src/: antd_client.rs  auth.rs  catalog.rs  config.rs  constants.rs  db.rs  errors.rs  jobs.rs  main.rs  media.rs  metrics.rs  models.rs  pipeline.rs  quote.rs  routes.rs  state.rs  storage.rs  upload.rs
rust_admin/src/catalog/: db_document.rs  state_file.rs  sync.rs
rust_admin/src/jobs/: cleanup.rs  lease_worker.rs  recovery.rs  scheduling.rs
rust_admin/src/pipeline/: manifest.rs  quote.rs  upload.rs
rust_admin/src/routes/: admin.rs  health.rs  upload.rs
rust_stream/: Cargo.toml  Dockerfile  README.md
rust_stream/src/: antd_client.rs  cache.rs  config.rs  hls.rs  main.rs  metrics.rs  models.rs  routes.rs  state.rs
scripts/: backup-production.sh  check-observability-overlay-parity.sh  devcontainer-testbench.sh  restore-production.sh  smoke-local-devnet.sh  stage-tauri-sidecars.sh
standalone_launcher/: Cargo.toml
standalone_launcher/src/: main.rs
(+78 files in other folders)
