[workspace]
members = [
    "common",
    "antd_service",
    "launcher_core",
    "rust_admin",
    "rust_stream",
    "standalone_launcher",
]
resolver = "2"
exclude = ["desktop_app/src-tauri"]

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.11"
tokio = "1"
tower-http = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
