[package]
name = "autvid_common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
http = "1"
rand = "0.8"
reqwest.workspace = true
subtle = "2"
tokio = { workspace = true, features = ["macros", "signal"] }
