[package]
name = "launcher_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
fs2 = "0.4"
libc = "0.2"
rand = "0.8"
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { workspace = true, features = ["fs"] }
tracing.workspace = true
