[package]
name = "rust_admin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
db-tests = []

[dependencies]
anyhow.workspace = true
autvid_common = { path = "../common" }
axum = { workspace = true, features = ["macros", "multipart"] }
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
fs2 = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.8"
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json", "migrate", "macros"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
tower-http = { workspace = true, features = ["cors", "request-id", "timeout", "trace", "util"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
