[package]
name = "rust_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "timeout", "trace", "util"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
base64 = "0.22"
bytes = "1"
linked-hash-map = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
autvid_common = { path = "../common" }
