[package]
name = "rust_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { workspace = true, features = ["macros"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tower-http = { workspace = true, features = ["cors", "request-id", "timeout", "trace", "util"] }

# Async runtime
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

# Serialization
base64.workspace = true
bytes.workspace = true
linked-hash-map = "0.5"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
anyhow.workspace = true
autvid_common = { path = "../common" }
