[package]
name = "autvid_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
libc = "0.2"
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
tokio = { workspace = true, features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
