[package]
name = "autvid_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
launcher_core = { path = "../launcher_core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
