[package]
name = "autvid_desktop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

# Workspace-excluded crate: mirror [workspace.lints.clippy] from the repo root
[lints.clippy]
unwrap_used = "warn"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
launcher_core = { path = "../../launcher_core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync"] }
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
